# ask

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
extraction/: factory.py  server.py
extraction/ai/: extractor.py  rates_extractor.py
extraction/loader/: docu_loader.py
extraction/services/: extraction_service.py
scripts/: start.sh
